canvas input fix: use visibility:hidden when editing

--- a/app/browser/scss/style.scss
+++ b/app/browser/scss/style.scss
@@ -759,7 +759,7 @@ a {
             }
         }
         input + canvas {
-            opacity: 0;
+            visibility: hidden;
         }
 
         &:focus {
